# Snake_game

./: CMakeLists.txt
doxygen_doc/: Doxyfile
doxygen_doc/html/: annotated.html  bug.html  classes.html  dir_7f57b1e41c5acd0e859ae5f3a2b075a9.html  dir_b2f33c71d4aa5e7af42a1ca61ff5af1b.html  files.html  food__list_8c.html  food__list__header_8h.html  food__list__header_8h_source.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_vars.html  index.html  main_8c.html  main__header_8h.html  main__header_8h_source.html  menudata.js  obstacle__list_8c.html  obstacle__list__header_8h.html  obstacle__list__header_8h_source.html  pages.html  point_8c.html  point__header_8h.html  point__header_8h_source.html  snake_8c.html  snake__header_8h.html  snake__header_8h_source.html  structPoint-members.html  structPoint.html  structSnake-members.html  structSnake.html  structfood__list-members.html  structfood__list.html  structfood__list__node-members.html  structfood__list__node.html  (+8 more)
doxygen_doc/latex/: annotated.tex  bug.tex  dir_7f57b1e41c5acd0e859ae5f3a2b075a9.tex  dir_b2f33c71d4aa5e7af42a1ca61ff5af1b.tex  files.tex  food__list_8c.tex  food__list__header_8h.tex  main_8c.tex  main__header_8h.tex  obstacle__list_8c.tex  obstacle__list__header_8h.tex  point_8c.tex  point__header_8h.tex  refman.tex  snake_8c.tex  snake__header_8h.tex  (+8 more)
headers/: food_list_header.h  main_header.h  obstacle_list_header.h  point_header.h  snake_header.h
source/: food_list.c  main.c  obstacle_list.c  point.c  snake.c
(+51 files in other folders)
